--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "jade": "~1.6.0"
   },
   "devDependencies": {
+    "connect-livereload": "^0.5.2",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
     "gulp-express": "^0.1.4",
     "gulp-jshint": "^1.9.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.2.4",
-    "gulp-uglify": "^1.0.2"
+    "gulp-uglify": "^1.0.2",
+    "tiny-lr": "^0.1.4"
   }
 }
