--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "gulp-sass": "^1.2.4",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3"
@@ -23,6 +24,7 @@
     "gulp-jshint": "^1.9.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.2.4",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
     "tiny-lr": "^0.1.4"
   }
