--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
     "gulp-express": "^0.1.4",
+    "gulp-imagemin": "^2.1.0",
     "gulp-jshint": "^1.9.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.2.4",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
+    "imagemin-pngquant": "^4.0.0",
     "tiny-lr": "^0.1.4"
   }
 }
