--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "gulp"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -20,6 +20,7 @@
     "connect-livereload": "^0.5.2",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-debug": "^2.0.0",
     "gulp-express": "^0.1.4",
     "gulp-imagemin": "^2.1.0",
     "gulp-jshint": "^1.9.0",
