--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
   "dependencies": {
     "angular": "~1.3.8",
     "bootstrap": "~3.3.1",
-    "bootstrap-sass-official": "~3.3.1"
+    "bootstrap-sass-official": "~3.3.1",
+    "angular-bootstrap": "~0.12.0"
+  },
+  "resolutions": {
+    "angular": "~1.3.8"
   }
 }
