--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular": "~1.3.8",
     "bootstrap": "~3.3.1",
     "bootstrap-sass-official": "~3.3.1",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-route": "~1.3.8"
   },
   "resolutions": {
     "angular": "~1.3.8"
