--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "bootstrap": "~3.3.1",
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "~0.12.0",
-    "angular-route": "~1.3.8"
+    "angular-route": "~1.3.8",
+    "angular-resource": "~1.3.8",
+    "angular-cookies": "~1.3.8"
   },
   "resolutions": {
     "angular": "~1.3.8"
