--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "postinstall": "bower install && gulp build"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
