--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "gulp",
+    "start": "node server.js",
     "postinstall": "bower install && gulp build"
   },
   "dependencies": {
