--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-route": "~1.3.8",
     "angular-resource": "~1.3.8",
     "angular-cookies": "~1.3.8",
-    "angular-http-auth": "~1.2.2"
+    "angular-http-auth": "~1.2.2",
+    "angular-material": "~0.7.0"
   },
   "resolutions": {
     "angular": "~1.3.8"
