--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-resource": "~1.3.8",
     "angular-cookies": "~1.3.8",
     "angular-http-auth": "~1.2.2",
-    "angular-material": "~0.7.0"
+    "angular-material": "~0.7.0",
+    "ng-flow": "~2"
   },
   "resolutions": {
     "angular": "~1.3.8"
