--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "angular-cookies": "~1.3.8",
     "angular-http-auth": "~1.2.2",
     "angular-material": "~0.7.0",
-    "ng-flow": "~2"
+    "angular-file-upload": "~1.1.5"
   },
   "resolutions": {
     "angular": "~1.3.8"
