--- a/package.json
+++ b/package.json
@@ -9,19 +9,13 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
+    "connect-livereload": "^0.5.2",
+    "connect-multiparty": "^1.2.5",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-session": "^1.10.1",
-    "gulp-sass": "^1.2.4",
-    "jade": "~1.6.0",
-    "mongoose": "^3.8.21",
-    "morgan": "~1.3.0",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^1.0.0",
-    "serve-favicon": "~2.1.3",
-    "connect-livereload": "^0.5.2",
+    "gridfs-stream": "^0.5.3",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
     "gulp-debug": "^2.0.0",
@@ -33,8 +27,15 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
     "imagemin-pngquant": "^4.0.0",
+    "jade": "~1.6.0",
+    "mongoose": "^3.8.21",
+    "morgan": "~1.3.0",
+    "multiparty": "^4.1.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
+    "serve-favicon": "~2.1.3",
     "tiny-lr": "^0.1.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
