--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-uglify": "^1.0.2",
     "imagemin-pngquant": "^4.0.0",
     "jade": "~1.6.0",
+    "lwip": "0.0.6",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
     "multiparty": "^4.1.1",
