--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
     "serve-favicon": "~2.1.3",
-    "tiny-lr": "^0.1.4"
+    "tiny-lr": "^0.1.4",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {}
 }
