--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "imagemin-pngquant": "^4.0.0",
     "jade": "~1.6.0",
     "lwip": "0.0.6",
+    "markdown-js": "0.0.3",
     "mongoose": "^3.8.21",
     "morgan": "~1.3.0",
     "multiparty": "^4.1.1",
