--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "angular-cookies": "~1.3.8",
     "angular-http-auth": "~1.2.2",
     "angular-material": "~0.7.0",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angular-scroll": "~0.6.5",
+    "ngSmoothScroll": "~1.7.1"
   },
   "resolutions": {
     "angular": "~1.3.8"
